// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should combine size, variant, and isClosable 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-_component-tags-border-gray);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-md);
  line-height: var(--tonic-lineHeights-md);
  min-height: var(--tonic-sizes-8x);
  padding-top: calc(.25rem - .0625rem);
  padding-bottom: calc(.25rem - .0625rem);
  color: var(--tonic-colors-_component-tags-onBackground-gray);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  border-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-primary);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-primary);
  border-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-_component-tags-onBackground-gray);
  border-color: var(--tonic-colors-_component-tags-border-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
  border-color: var(--tonic-colors-_foreground-tertiary-disabled);
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-transparent);
  border: none;
  color: var(--tonic-colors-text-secondary);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  margin-left: var(--tonic-space-2x);
}

.emotion-2:focus-visible {
  outline-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  outline-offset: calc(0px - var(--tonic-space-1q));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1q);
}

.emotion-2:hover,
.emotion-2[data-hover] {
  background-color: var(--tonic-colors-_foreground-subtle-hovered);
  color: var(--tonic-colors-text-accent);
}

.emotion-2:disabled,
.emotion-2:disabled:focus,
.emotion-2:disabled:hover,
.emotion-2[aria-disabled=true],
.emotion-2[aria-disabled=true]:focus,
.emotion-2[aria-disabled=true]:hover,
.emotion-2[data-disabled] {
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

<div
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Combined Tag
  <button
    aria-label="Close"
    class="emotion-2 emotion-1"
    data-tonic="TagCloseButton"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-4 emotion-1"
      data-icon="CloseSIcon"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 16 16"
    >
      <path
        d="M9 8l4-4-1-1-4 4-4-4-1 1 4 4-4 4 1 1 4-4 4 4 1-1-4-4z"
      />
    </svg>
  </button>
</div>
`;

exports[`Tag should render correctly 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: var(--tonic-lineHeights-xs);
  min-height: var(--tonic-sizes-6x);
  padding-top: calc(.125rem - .0625rem);
  padding-bottom: calc(.125rem - .0625rem);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-primary);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<div
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Tag
</div>
`;

exports[`Tag should render with different sizes 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: 1;
  min-height: var(--tonic-sizes-4x);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-primary);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<div
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Small Tag
</div>
`;

exports[`Tag should render with different sizes 2`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: var(--tonic-lineHeights-xs);
  min-height: var(--tonic-sizes-6x);
  padding-top: calc(.125rem - .0625rem);
  padding-bottom: calc(.125rem - .0625rem);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-primary);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<div
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Medium Tag
</div>
`;

exports[`Tag should render with different sizes 3`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-md);
  line-height: var(--tonic-lineHeights-md);
  min-height: var(--tonic-sizes-8x);
  padding-top: calc(.25rem - .0625rem);
  padding-bottom: calc(.25rem - .0625rem);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-primary);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<div
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Large Tag
</div>
`;

exports[`Tag should render with different variants 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: var(--tonic-lineHeights-xs);
  min-height: var(--tonic-sizes-6x);
  padding-top: calc(.125rem - .0625rem);
  padding-bottom: calc(.125rem - .0625rem);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-primary);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<div
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Solid Tag
</div>
`;

exports[`Tag should render with different variants 2`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-_component-tags-border-gray);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: var(--tonic-lineHeights-xs);
  min-height: var(--tonic-sizes-6x);
  padding-top: calc(.125rem - .0625rem);
  padding-bottom: calc(.125rem - .0625rem);
  color: var(--tonic-colors-_component-tags-onBackground-gray);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  border-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-primary);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-primary);
  border-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-_component-tags-onBackground-gray);
  border-color: var(--tonic-colors-_component-tags-border-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
  border-color: var(--tonic-colors-_foreground-tertiary-disabled);
}

<div
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Outline Tag
</div>
`;

exports[`Tag should render with disabled state 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: var(--tonic-lineHeights-xs);
  min-height: var(--tonic-sizes-6x);
  padding-top: calc(.125rem - .0625rem);
  padding-bottom: calc(.125rem - .0625rem);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-primary);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<div
  aria-disabled="true"
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Disabled Tag
</div>
`;

exports[`Tag should render with error state 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: var(--tonic-lineHeights-xs);
  min-height: var(--tonic-sizes-6x);
  padding-top: calc(.125rem - .0625rem);
  padding-bottom: calc(.125rem - .0625rem);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-primary);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<div
  aria-invalid="true"
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Error Tag
</div>
`;

exports[`Tag should render with isClosable but without onClose handler 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: calc(infinity * 1px);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: var(--tonic-lineHeights-xs);
  min-height: var(--tonic-sizes-6x);
  padding-top: calc(.125rem - .0625rem);
  padding-bottom: calc(.125rem - .0625rem);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-0:focus-visible {
  outline-color: var(--tonic-colors-border-_primary-focused);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-0:invalid:hover,
.emotion-0[aria-invalid=true]:hover,
.emotion-0:invalid[data-hover],
.emotion-0[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-primary);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-transparent);
  border: none;
  color: var(--tonic-colors-text-secondary);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  margin-left: var(--tonic-space-2x);
}

.emotion-2:focus-visible {
  outline-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  outline-offset: calc(0px - var(--tonic-space-1q));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1q);
}

.emotion-2:hover,
.emotion-2[data-hover] {
  background-color: var(--tonic-colors-_foreground-subtle-hovered);
  color: var(--tonic-colors-text-accent);
}

.emotion-2:disabled,
.emotion-2:disabled:focus,
.emotion-2:disabled:hover,
.emotion-2[aria-disabled=true],
.emotion-2[aria-disabled=true]:focus,
.emotion-2[aria-disabled=true]:hover,
.emotion-2[data-disabled] {
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

<div
  class="emotion-0 emotion-1"
  data-tonic="Tag"
>
  Closable Tag
  <button
    aria-label="Close"
    class="emotion-2 emotion-1"
    data-tonic="TagCloseButton"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-4 emotion-1"
      data-icon="CloseSIcon"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 16 16"
    >
      <path
        d="M9 8l4-4-1-1-4 4-4-4-1 1 4 4-4 4 1 1 4-4 4 4 1-1-4-4z"
      />
    </svg>
  </button>
</div>
`;
